@@ -1,5 +1,5 @@
 #ifndef lint
-static char *RCSid() { return RCSid("$Id: graphics.c,v 1.302.2.25 2010/12/18 04:26:25 sfeam Exp $"); }
+static char *RCSid() { return RCSid("$Id: graphics.c,v 1.302.2.26 2011/03/11 05:43:03 sfeam Exp $"); }
 #endif
 
 /* GNUPLOT - graphics.c */
@@ -3678,6 +3678,13 @@ plot_boxes(struct curve_points *plot, int xaxis_y)
 		/* Variable color */
 		if (plot->plot_style == BOXES) {
 		    check_for_variable_color(plot, &plot->points[i]);
+		}
+		if (plot->plot_style == BOXXYERROR) {
+		    /* This style really does need yhigh, so we stored the color in z */
+		    double temp = plot->points[i].yhigh;
+		    plot->points[i].yhigh = plot->points[i].z;
+		    check_for_variable_color(plot, &plot->points[i]);
+		    plot->points[i].yhigh = temp;
 		}
 
 		if ((plot->fill_properties.fillstyle != FS_EMPTY) && t->fillbox) {
