@@ -1,3 +1,8 @@
+2011-03-10  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/plot2d.c(get_data) src/graphics.c(plot_boxes):
+	variable color for plot style BOXXYERROR
+
 2011-03-01  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* PATCHLEVEL:	
